--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "response",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index2.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon index.js"
+    "serve": "nodemon index2.js"
   },
   "keywords": [],
   "author": "",
