--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongoose": "^6.3.6",
     "node-fetch": "^3.2.4",
     "nodemon": "^2.0.16"
   }
